--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,13 @@ body {
   font-size: 12px;
   -webkit-font-smoothing: antialiased;
   margin-top: 80px;
-} 
+}
 
 /* Horizontal Divider between Gallery Group */
 body hr {
-    border: 0;
-    height: 1px;
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.10), rgba(255, 255, 255, 0));
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.10), rgba(255, 255, 255, 0));
 }
 
 nav {
@@ -46,25 +46,55 @@ a:active {color: inherit;text-decoration: none;}
   /*background: #201010;*/
 }
 
-.photo-list {
+.photo-block {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
-.photo-container {
+.photo-frame {
   margin:24px;
-  height: 200px;
-  width: 200px;
   position: relative; /* must set so .info can set position */
   transition: transform 0.3s, border 0.3s;
   box-shadow: -1px 3px 4px #111;
   border: 1px solid #cecece;
 }
 
-.photo-container:hover {
+.photo-frame:hover {
   transition: transform 0.3s, border 0.3s;
   transform: scale(1.05);
   border: 1px solid #2293ec;
+}
+
+.photo {
+  width: 200px;
+  height: 200px;
+}
+
+.photo img {
+  object-fit: cover;
+  width: 200px;
+  height: 200px;
+  position: absolute;
+}
+
+.category {
+  width: 300px;
+  height: 200px;
+}
+
+.category img {
+  object-fit: cover;
+  width: 300px;
+  height: 200px;
+  position: absolute;
+}
+
+.info {
+  text-shadow: 0px 3px 5.0px #000;
+  position: relative;
+  text-align: center;
+  top: 130px;
 }
 
 .album {
@@ -117,12 +147,7 @@ a:active {color: inherit;text-decoration: none;}
   transform: rotate(-5deg) translate(-8px, 5px);
 }
 
-.info {
-  text-shadow: 0px 3px 5.0px #000;
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-}
+
 
 #header-title {
   width: calc(100% - 300px);
